--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,62 +8,78 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/defaultBackground"
     tools:context="com.cspoet.ktflite.StartupActivity">
-
-    <com.wonderkiln.camerakit.CameraView
-        android:id="@+id/cameraView"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:layout_gravity="center|top" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_gravity="center|top"
-        android:layout_marginTop="300dp"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
 
-        <ImageView
-            android:id="@+id/imageViewResult"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:padding="2dp" />
+        <com.wonderkiln.camerakit.CameraView
+            android:id="@+id/cameraView"
+            android:layout_width="300dp"
+            android:layout_height="280dp"
+            android:layout_gravity="center" />
 
-        <TextView
-            android:id="@+id/textViewResult"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:fadeScrollbars="false"
+            android:layout_gravity="center"
             android:gravity="center"
-            android:maxLines="15"
-            android:scrollbars="vertical"
-            android:textColor="@android:color/black" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageViewResult"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:padding="2dp" />
+
+            <TextView
+                android:id="@+id/textViewResult"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:fadeScrollbars="false"
+                android:gravity="center"
+                android:maxLines="15"
+                android:scrollbars="vertical"
+                android:textColor="@android:color/black" />
+
+        </LinearLayout>
+
+
+        <Button
+            android:id="@+id/btnToggleCamera"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom|center"
+            android:text="@string/toggle_camera"
+            android:background="@drawable/button_style"
+            android:drawableStart="@drawable/ic_switch_camera_black_24dp"
+            android:textColor="@color/white"
+            android:elevation="12dp"
+
+
+            />
+
+        <Button
+            android:layout_marginTop="10dp"
+            android:id="@+id/btnDetectObject"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
+            android:layout_gravity="bottom|center"
+            android:text="@string/detect_object"
+            android:textColor="@color/colorPrimary"
+            android:background="@drawable/button_style_x"
+            android:elevation="12dp"
+            android:visibility="gone"
+            android:drawableStart="@drawable/ic_all_out_black_24dp"
+        />
+
 
     </LinearLayout>
 
-
-    <Button
-        android:id="@+id/btnToggleCamera"
-        android:layout_width="200dp"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom|center"
-        android:layout_marginBottom="50dp"
-        android:text="@string/toggle_camera"
-        android:background="@drawable/button_style"
-        android:textColor="@color/white" />
-
-    <Button
-        android:id="@+id/btnDetectObject"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_gravity="bottom|center"
-        android:text="@string/detect_object"
-        android:textAllCaps="false"
-        android:textColor="@android:color/black"
-        android:visibility="gone"
-        android:drawableStart="@drawable/ic_switch_camera_black_24dp"
-        />
 
 </FrameLayout>
