--- a/app/src/main/res/layout/result_dialog_layout.xml
+++ b/app/src/main/res/layout/result_dialog_layout.xml
@@ -18,6 +18,7 @@
             android:layout_height="160dp"
             android:layout_marginTop="10dp"
             android:layout_gravity="center"
+            android:gravity="center"
             >
 
         <com.wang.avi.AVLoadingIndicatorView
@@ -48,7 +49,7 @@
             android:textColor="@color/colorPrimary"
             android:maxLines="15"
             android:scrollbars="vertical"
-            android:textSize="15sp"
+            android:textSize="16sp"
             />
 
         <TextView
