--- a/app/src/main/res/layout/activity_startup.xml
+++ b/app/src/main/res/layout/activity_startup.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.cspoet.ktflite.StartupActivity">
+    tools:context="com.cspoet.ktflite.AppActivity">
 
     <com.wonderkiln.camerakit.CameraView
         android:id="@+id/cameraView"
